Main Bolt visualization and color adjustments to more natural color scheme.